--- a/src/custom-lesser-dark.css
+++ b/src/custom-lesser-dark.css
@@ -1,4 +1,4 @@
-/* 需要先装 Microsoft Yahei Mono 字体，否则把 font-family 改成其他名字 */
+/* first install font [Microsoft Yahei Mono], or modify font-family to other sans-serif */
 div#notebook, div.CodeMirror, div.output_area pre, .highlight pre, div.output_wrapper, div.prompt {
   font-family: 'Microsoft Yahei Mono', Monaco, Lucida, Courier, monospace !important;
 }
