--- a/src/custom-bright.css
+++ b/src/custom-bright.css
@@ -3,6 +3,10 @@ div#notebook, div.CodeMirror, div.output_area pre, .highlight pre, div.output_wr
   font-family: 'Microsoft Yahei Mono', Monaco, Lucida, Courier, monospace !important;
 }
 
+div.run_this_cell {
+    display: none;
+}
+
 /* GLOBALS */
 body {background-color: #eff1f5;}
 a {color: #8fa1b3;}
