--- a/src/custom-bright.css
+++ b/src/custom-bright.css
@@ -14,6 +14,8 @@ a {color: #8fa1b3;}
 /* INTRO PAGE */
 .toolbar_info, .list_container {color: #1c3657;}
 
+div#ipython-main-app {margin-left: auto !important;}
+
 /* NOTEBOOK */
 
 /* comment out this line to bring the toolbar back */
