--- a/src/custom-dracula.css
+++ b/src/custom-dracula.css
@@ -24,6 +24,10 @@ div.run_this_cell {
     display: none;
 }
 
+.container { width:85% !important; }
+.output_result { max-width:85% !important; }
+/*.prompt { display:none !important; }*/
+
 /* GLOBALS */
 
 @media not print { body { background-color: #eee; } }
